--- a/css/bootstrap-override.css
+++ b/css/bootstrap-override.css
@@ -1,7 +1,7 @@
 /*##########CSS for navbar start##########*/
 /*Website Name*/
 .navbar-default {
-    background-color: #4a4a4a;
+    background-color: #333333;
     border-color: transparent;
     color: #cacaca;
     border-radius: 0
@@ -23,7 +23,7 @@
 .navbar-default .navbar-nav > .active > a:hover,
 .navbar-default .navbar-nav > .active > a:focus {
     color: #ffffff;
-    background-color: #4a4a4a;
+    background-color: #24292e;
 }
 
 ul.nav a:hover { color: #fff !important; }
@@ -56,7 +56,7 @@ body {
     width: 100%;
     height: 60px; /* Set the fixed height of the footer here */
     line-height: 60px; /* Vertically center the text there */
-    background-color: #333333;
+    background-color: #24292e;
     color: #cacaca;
 }
 /*##########CSS for sticky footer end##########*/
