--- a/css/bootstrap-override.css
+++ b/css/bootstrap-override.css
@@ -1,7 +1,7 @@
 /*##########CSS for navbar start##########*/
 /*Website Name*/
 .navbar-default {
-    background-color: #333333;
+    background-color: #24292e;
     border-color: transparent;
     color: #cacaca;
     border-radius: 0
@@ -23,7 +23,7 @@
 .navbar-default .navbar-nav > .active > a:hover,
 .navbar-default .navbar-nav > .active > a:focus {
     color: #ffffff;
-    background-color: #24292e;
+    background-color: transparent;
 }
 
 ul.nav a:hover { color: #fff !important; }
