Work on backend and client.js

--- a/css/custom.css
+++ b/css/custom.css
@@ -32,6 +32,22 @@ body {
     color: #cacaca;
 }
 
+.colors {
+    position: fixed;
+}
+
+.color {
+    display: inline-block;
+    height: 48px;
+    width: 48px;
+}
+
+.color.black { background-color: black; }
+.color.red { background-color: red; }
+.color.green { background-color: green; }
+.color.blue { background-color: blue; }
+.color.yellow { background-color: yellow; }
+
 /*##########CSS for sticky footer end##########*/
 
 #drawCanvas {
