--- a/css/custom.css
+++ b/css/custom.css
@@ -42,31 +42,72 @@ body {
     width: 48px;
 }
 
-.color.black { background-color: black; }
-.color.red { background-color: red; }
-.color.green { background-color: green; }
-.color.blue { background-color: blue; }
-.color.yellow { background-color: yellow; }
+.color.black {
+    background-color: black;
+}
+
+.color.red {
+    background-color: red;
+}
+
+.color.green {
+    background-color: green;
+}
+
+.color.blue {
+    background-color: blue;
+}
+
+.color.yellow {
+    background-color: yellow;
+}
 
 /*##########CSS for sticky footer end##########*/
 
 #drawCanvas {
     border: 1px solid #343a40;
     border-radius: 5px;
-    height: 100%;
-    width: 100%;
 }
 
-#chatBox {
+#messages {
     border: 1px solid #343a40;
     border-radius: 5px;
     width: 100%;
     height: 100%;
     resize: none;
     outline: none;
+    list-style: none;
+    word-wrap: break-word;
+    overflow-y: scroll;
+    padding-left: 1rem;
 }
 
-#messageBox {
+#inputMessage {
     border: 1px solid #343a40;
     border-radius: 5px;
 }
+
+/*
+.scrollbar {
+    float: left;
+    height: 300px;
+    width: 65px;
+    background: #fff;
+    overflow-y: scroll;
+}
+
+.force-overflow {
+    min-height: 450px;
+}
+
+.scrollbar-primary::-webkit-scrollbar {
+    width: 12px;
+    background-color: #F5F5F5;
+}
+
+.scrollbar-primary::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1);
+    background-color: #24292e;
+}
+*/
