--- a/css/custom.css
+++ b/css/custom.css
@@ -82,7 +82,7 @@
     text-align: center
 }
 
-#currentWord {
+#instructionBox {
     border: 1px solid #343a40;
     border-radius: 0.25rem;
     background-color: transparent;
