--- a/css/custom.css
+++ b/css/custom.css
@@ -1,4 +1,13 @@
 /*##########CSS for content start##########*/
+html {
+    position: relative;
+    min-height: 100%;
+}
+
+body {
+    margin-bottom: 60px; /* Margin bottom by footer height */
+}
+
 .container-fluid {
     width: auto;
     max-width: 90%;
@@ -10,6 +19,7 @@
     padding-bottom: 1rem;
 }
 
+/*----game area css start----*/
 #drawCanvas {
     border: 1px solid #343a40;
     border-radius: 0.25rem;
@@ -56,24 +66,6 @@
     border-radius: 0.25rem;
 }
 
-#messages {
-    border: 1px solid #343a40;
-    border-radius: 0.25rem;
-    width: 100%;
-    height: 70vh;
-    resize: none;
-    outline: none;
-    list-style: none;
-    word-wrap: break-word;
-    overflow-y: scroll;
-    padding-bottom: 1rem;
-}
-
-#inputMessage {
-    border: 1px solid #343a40;
-    width: 100%;
-}
-
 #gameTimer {
     border: 1px solid #343a40;
     border-radius: 0.25rem;
@@ -90,6 +82,26 @@
     outline: none;
     box-shadow: none;
     text-align: center
+}
+/*----game area css end----*/
+
+/*----chat css start----*/
+#messages {
+    border: 1px solid #343a40;
+    border-radius: 0.25rem;
+    width: 100%;
+    height: 70vh;
+    resize: none;
+    outline: none;
+    list-style: none;
+    word-wrap: break-word;
+    overflow-y: scroll;
+    padding-bottom: 1rem;
+}
+
+#inputMessage {
+    border: 1px solid #343a40;
+    width: 100%;
 }
 
 .scrollbar {
@@ -114,19 +126,10 @@
     -webkit-box-shadow: none;
     background-color: #cacaca;
 }
-
+/*----chat css end----*/
 /*##########CSS for content end##########*/
 
 /*##########CSS for sticky footer start##########*/
-html {
-    position: relative;
-    min-height: 100%;
-}
-
-body {
-    margin-bottom: 60px; /* Margin bottom by footer height */
-}
-
 .footer {
     position: absolute;
     bottom: 0;
@@ -136,5 +139,4 @@ body {
     background-color: #24292e;
     color: #cacaca;
 }
-
 /*##########CSS for sticky footer end##########*/
